--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <h1>Welcome to my lab</h1>
   <p>
-    I will update some of the experiments I do when I'm bored or when I want to try little things here. <br />
-    You can find this experiments <a href="https://github.com/Lissandre/lab">on my GitHub</a>
+    I will upload some of the experiments I do when I'm bored or when I want to try little things here. <br />
+    You can find these experiments <a href="https://github.com/Lissandre/lab">on my GitHub</a>
     <ul>
       <li>
         <p>
