--- a/index.html
+++ b/index.html
@@ -11,18 +11,35 @@
   <p>
     I will upload some of the experiments I do when I'm bored or when I want to try little things here. <br />
     You can find these experiments <a href="https://github.com/Lissandre/lab">on my GitHub</a>
-    <ul>
-      <li>
-        <p>
-          <h3 class="title"><a href="./experiments/canvas-circle/">Canvas Circles</a></h3>
-          An interactive experiment with Canvas, where your cursor position defines the size of the circles you draw.
-        </p>
-      </li>
-      <li>
-        <h3 class="title">And more to come soon !</h3>
-
-      </li>
-    </ul>
   </p>
+  <h2>Experiments</h2>
+  <ul>
+    <li>
+      <p>
+        <h3 class="title"><a href="./experiments/canvas-circle/">Canvas Circles</a></h3>
+        An interactive experiment with Canvas, where your cursor position defines the size of the circles you draw.
+      </p>
+    </li>
+    <li>
+      <h3 class="title">And more to come soon !</h3>
+    </li>
+  </ul>
+  <h2>Work in Progress</h2>
+  <ul>
+    <li>
+      <p>
+        <h3 class="title"><a href="./experiments/colored-lines/">Colored Lines</a></h3>
+        A simple square filled with lines. <br />
+        TODO > Add movement with a noise function.
+      </p>
+    </li>
+    <li>
+      <p>
+        <h3 class="title"><a href="./experiments/square-printing-raster/">Square Printing Raster</a></h3>
+        An image reproduced with CMJN squares to reproduce a printer raster, but with stroked squares. <br />
+        TODO > Input a user image or take webcam input and do it in real time
+      </p>
+    </li>
+  </ul>
 </body>
 </html>
