--- a/experiments/square-printing-raster/index.html
+++ b/experiments/square-printing-raster/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <canvas id="_canvas"></canvas>
+  <canvas id="_tempcanvas"></canvas>
+  <video id="video" height="1080" width="1920" autoplay></video>
   <script src="./src/js/script.js"></script>
 </body>
 </html>
