--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       </p>
     </li>
     <li>
+      <p>
+        <h3 class="title"><a href="./experiments/square-printing-raster/">Square Printing Raster</a></h3>
+        Your webcam flux reproduced with CMJN squares to reproduce a printer raster, but with stroked squares. <br />
+      </p>
+    </li>
+    <li>
       <h3 class="title">And more to come soon !</h3>
     </li>
   </ul>
@@ -31,13 +37,6 @@
         <h3 class="title"><a href="./experiments/colored-lines/">Colored Lines</a></h3>
         A simple square filled with lines. <br />
         TODO > Add movement with a noise function.
-      </p>
-    </li>
-    <li>
-      <p>
-        <h3 class="title"><a href="./experiments/square-printing-raster/">Square Printing Raster</a></h3>
-        An image reproduced with CMJN squares to reproduce a printer raster, but with stroked squares. <br />
-        TODO > Input a user image or take webcam input and do it in real time
       </p>
     </li>
   </ul>
