--- a/experiments/colored-lines/index.html
+++ b/experiments/colored-lines/index.html
@@ -11,6 +11,6 @@
   <!-- <script src="./src/js/dat.gui.min.js"></script> -->
   <script src="./src/js/color-scheme.js"></script>
   <script src="./src/js/noise.js"></script>
-  <script src="./src/js/script.js"></script>
+  <script src="./src/js/main.js" type="module"></script>
 </body>
 </html>
