--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       </p>
     </li>
     <li>
+      <p>
+        <h3 class="title"><a href="./experiments/colored-lines/">Colored Lines</a></h3>
+        A simple square filled with lines of a random generated color palette and animated with noise.
+      </p>
+    </li>
+    <li>
       <h3 class="title">And more to come soon !</h3>
     </li>
   </ul>
@@ -34,9 +40,8 @@
   <ul>
     <li>
       <p>
-        <h3 class="title"><a href="./experiments/colored-lines/">Colored Lines</a></h3>
-        A simple square filled with lines. <br />
-        TODO > Add movement with a noise function.
+        <h3 class="title">Nothing right now</h3>
+        Come back later to see my future little projects !
       </p>
     </li>
   </ul>
