add nathan's home project

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
   <ul>
     <li>
       <p>
-        <h3 class="title">Nothing right now</h3>
+        <h3 class="title"><a href="https://nathasha.netlify.app/">Nathan's home</a></h3>
+        Building a friend flat with THREE.js and CANNON to make it destroyable with good physic.
+        TO DO: grab objects, add all models, more controls, more musics, (phone & vr support ?)
+      </p>
+    </li>
+    <li>
+      <p>
+        <h3 class="title">Nothing more right now</h3>
         Come back later to see my future little projects !
       </p>
     </li>
